--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <p class="text-teal-100 text-center mb-6 max-w-2xl">
                     為了更深入推廣道將圳的環境教育，我們開發了專屬的 Android 應用程式。立即下載 APK 檔案，隨時隨地查閱豐富的專題內容！
                 </p>
-                <a href="18.apk" download="道將圳電子書.apk" class="inline-flex items-center justify-center bg-white text-teal-700 font-extrabold py-4 px-10 rounded-full transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100 shadow-lg text-lg">
+                <a href="https://drive.google.com/file/d/1aRaQGurYUFLLCvTIr1r-d2An7PIWZPL1/view?usp=sharing" download="道將圳電子書.apk" class="inline-flex items-center justify-center bg-white text-teal-700 font-extrabold py-4 px-10 rounded-full transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100 shadow-lg text-lg">
                     <i class="ph-fill ph-android-logo text-2xl mr-3"></i>
                     下載道將圳 APP (APK)
                 </a>
@@ -527,3 +527,4 @@
 
 </body>
 </html>
+
