--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+﻿
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -174,7 +175,11 @@
             <!-- 視覺元素：運河景觀 -->
             <div class="content-card rounded-xl overflow-hidden shadow-2xl md:col-span-2">
                 <img src="20.jpg" alt="陽光下的道將圳河道景觀" class="w-full h-80 object-cover transform transition duration-500 hover:scale-110">
-            </div>
+  
+<p class="text-center text-sm p-3 bg-white text-gray-600">
+                    圖片出處：Google地圖 日月同輝加註
+                </p>
+          </div>
             <!-- 歷史事實重點提示卡 -->
             <div class="bg-white p-6 rounded-xl shadow-lg border-b-4 border-cyan-600 space-y-4 md:col-span-1">
                 <h3 class="text-2xl font-bold text-cyan-700 flex items-center">
@@ -508,7 +513,7 @@
             <p class="text-teal-100 text-center mb-6 max-w-2xl">
                 所有走讀、訪談、知識，都濃縮在這個 APP 裡，歡迎下載體驗！
             </p>
-            <a href="https://drive.google.com/file/d/1aRaQGurYUFLLCvTIr1r-d2An7PIWZPL1/view" download="道將圳電子書.apk" class="inline-flex items-center justify-center bg-white text-teal-600 font-extrabold py-4 px-10 rounded-full transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100 shadow-lg text-lg">
+            <a href="https://drive.google.com/file/d/1aRaQGurYUFLLCvTIr1r-d2An7PIWZPL1/view" download="道將圳電子書.apk" target="_blank" class="inline-flex items-center justify-center bg-white text-teal-600 font-extrabold py-4 px-10 rounded-full transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100 shadow-lg text-lg">
                 <i class="ph-fill ph-android-logo text-2xl mr-3"></i>
                 下載道將圳 APP (APK)
             </a>
